--- a/breast-cancer/logistic-regression.ipynb
+++ b/breast-cancer/logistic-regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,17 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_intercept(X):\n",
-    "    return np.c_[np.zeros(len(X)), X]"
+    "    return np.c_[np.ones(len(X)), X]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   0.  -658.  -290.  -314.  -299.  -468.  -299.  -462.5 -280.  -236.5]\n"
+      "[-22.2  -65.8  -29.   -31.4  -29.9  -46.8  -29.9  -46.25 -28.   -23.65]\n"
      ]
     }
    ],
@@ -103,7 +103,66 @@
     "\n",
     "nX = add_intercept(X)\n",
     "W = np.zeros(np.size(nX,1))\n",
-    "print(update_weights(nX, W, Y, 0.5))"
+    "print(update_weights(nX, W, Y, 0.05))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LogisticRegression:\n",
+    "    def __init__(self, alpha=0.05):\n",
+    "        self.alpha = alpha\n",
+    "        self.weights = None\n",
+    "\n",
+    "    def __add_intercept(self, X):\n",
+    "        return np.c_[np.ones(len(X)), X]\n",
+    "    \n",
+    "    def __sigmoid(self, Z):\n",
+    "        return (1/(math.exp(-Z)))\n",
+    "    \n",
+    "    def __cross_entropy_derivative(self, X, W, y):\n",
+    "        W_t = np.transpose(W)\n",
+    "        return X*(y-self.__sigmoid(np.dot(W_t, X)))\n",
+    "    \n",
+    "    def update_weights(self, X, Y):\n",
+    "        newW = np.copy(self.weights)\n",
+    "        loss_derivative = np.zeros(np.size(X,1))\n",
+    "\n",
+    "        for i in range(len(X)):\n",
+    "            loss_derivative = np.add(loss_derivative, self.__cross_entropy_derivative(X[i], self.weights, Y[i]))\n",
+    "\n",
+    "        newW = np.add(W, self.alpha*loss_derivative)\n",
+    "        return newW\n",
+    "    \n",
+    "    def fit(self, X, Y):\n",
+    "        nX = __add_intercept(X)\n",
+    "        self.weights = np.zeros(np.size(nX,1))\n",
+    "        newW = update_weights(X,Y)\n",
+    "        return newW\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-22.2  -65.8  -29.   -31.4  -29.9  -46.8  -29.9  -46.25 -28.   -23.65]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression()\n",
+    "\n",
+    "print(lr.fit(X,Y))"
    ]
   },
   {
@@ -111,12 +170,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class LogisticRegression:\n",
-    "    def __init__(self, alpha=0.05):\n",
-    "        self.alpha = alpha\n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
