--- a/wine/wine-LR.ipynb
+++ b/wine/wine-LR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=data[:,1:-1]\n",
+    "X=data[:,0:-1]\n",
     "Y=np.ravel((data[:,-1:]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,12 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LogisticRegression:\n",
-    "    def __init__(self, alpha=0.0001, threshold = 1.5):\n",
+    "    def __init__(self, alpha=0.0001, threshold = 2.5):\n",
     "        self.alpha = alpha\n",
     "        self.threshold = threshold\n",
     "        self.stop = False\n",
@@ -178,143 +178,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 fold selected - model will be trained and validated on same data set\n",
       "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
+      " stop threshold:2.5 \n",
       " number of iterations: 10000\n",
-      "weights:[-15.24983136 -38.04730747  12.00555257  -3.10866986  -4.13019368\n",
-      "   4.2747384   -0.69117553 -15.25897934 -51.49106061  17.73269461\n",
-      "  23.95367676]\n",
-      "1-fold LR accuracy on wine: 55.03439649781113\n",
-      "78.7933897972107\n",
-      "\n",
-      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "weights:[-12.11842787  -4.12360625 -33.12781238  15.18441164  -2.21369087\n",
+      "  -2.4392379    3.13966974  -3.01235549 -12.11321932 -44.01184925\n",
+      "  18.38059553  21.81374871]\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 10000\n",
-      "weights:[ -9.14381698 -20.24417875   6.42947943  -1.7749464   -2.53879864\n",
-      "   2.22445449  -1.69221344  -9.18892192 -30.02532272   7.73061983\n",
-      "  12.23776707]\n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 6231\n",
+      "weights:[ -7.57855634  -5.66879451 -22.18205089   8.36686696  -3.49826839\n",
+      "  -2.44048974   3.98298528  -0.85691794  -7.60909407 -27.88214045\n",
+      "   8.66108312  18.12914758]\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 1001\n",
-      "weights:[-0.64057538 -2.11536929  0.93761563  0.28294807 -0.12684089  1.84790407\n",
-      " -0.56727772 -0.63745016 -2.29156225  1.11698343  3.41069503]\n",
-      "2-fold LR accuracy on wine: 59.449311639549435\n",
-      "43.21233296394348\n",
-      "\n",
-      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 5989\n",
+      "weights:[ -8.03765654  -0.31358847 -20.90659036   7.51013181  -3.40524004\n",
+      "  -2.36381191   3.37976482  -3.34916919  -8.01499359 -28.16457386\n",
+      "  10.04111767  14.68475331]\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 10000\n",
-      "weights:[-11.78451349 -27.79075945   6.12768914  -3.98532882  -2.46158719\n",
-      "   3.4223712   -0.58011494 -11.87013325 -37.4016637   12.41096462\n",
-      "  17.01052067]\n",
-      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
-      "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 10000\n",
-      "weights:[-10.29947964 -27.02034818  10.08363499  -2.35550954  -3.56033107\n",
-      "   3.66146664  -0.843828   -10.24996375 -33.9409426   12.16877794\n",
-      "  16.34039639]\n",
-      "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 1000\n",
-      "weights:[-1.13676814 -2.83686973  1.2606396   0.38676709 -0.23469241  2.09145672\n",
-      " -0.95342707 -1.1385287  -4.18864454  1.11906668  3.81854556]\n",
-      "3-fold LR accuracy on wine: 59.523809523809526\n",
-      "111.6887936592102\n",
-      "\n",
-      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
-      "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 10000\n",
-      "weights:[-12.91457881 -30.18351555   8.80395937  -4.3325989   -2.56036441\n",
-      "   3.82341332  -0.69759301 -12.96703179 -42.33075593  13.92416579\n",
-      "  19.28552673]\n",
-      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
-      "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 10000\n",
-      "weights:[-11.67017298 -28.70722758   9.77142072  -1.87074915  -4.1562658\n",
-      "   4.07214299  -0.78512382 -11.66886984 -39.42635287  11.34386909\n",
-      "  17.83489785]\n",
-      "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
+      " stop threshold:2.5 \n",
       " number of iterations: 1002\n",
-      "weights:[-1.24296688 -3.43034531  1.41480829 -0.05097332 -0.25146688  1.35987272\n",
-      " -1.52127099 -1.24172289 -4.14424383  1.69183508  4.07331643]\n",
+      "weights:[-1.35172067 -0.72678651 -3.59473228  1.66251224  0.61848476 -0.26298051\n",
+      "  2.29212268 -2.31276385 -1.35151153 -4.69370729  1.71389785  4.67242151]\n",
+      "learning rate:0.0001 \n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 5441\n",
+      "weights:[ -7.02497639  -0.27392183 -18.22388636   7.15288307  -3.32658912\n",
+      "  -1.88285887   3.5302808   -3.33221173  -7.03051398 -25.71864922\n",
+      "   7.3652256   13.41510863]\n",
+      "62.13166144200627\n",
       "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
+      " stop threshold:2.5 \n",
       " number of iterations: 10000\n",
-      "weights:[-10.15886449 -26.99073497   9.44064242  -2.2975582   -2.9242994\n",
-      "   3.81291197  -0.85973204 -10.15986247 -37.06652821  11.27242698\n",
-      "  17.23773399]\n",
-      "4-fold LR accuracy on wine: 56.015037593984964\n",
-      "181.1219289302826\n",
-      "\n",
+      "weights:[-11.98003168   6.22088982 -32.98006801  16.28388611  -2.28368125\n",
+      "  -2.39536565   3.10305497  -3.02120527 -11.96973904 -44.25161168\n",
+      "  18.63423255  22.65359187 -10.47529208]\n",
+      "learning rate:0.0001 \n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 6155\n",
+      "weights:[ -7.30611815   2.99903649 -22.00234525   9.19530799  -3.77564785\n",
+      "  -2.28615494   3.06841554  -3.104186    -7.33370504 -27.6049487\n",
+      "   8.82270034  18.72768334  -9.80800077]\n",
       "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
+      " stop threshold:2.5 \n",
       " number of iterations: 10000\n",
-      "weights:[-13.24761274 -32.14279675  11.21938728  -3.00757133  -2.6340311\n",
-      "   3.33075108  -3.05525731 -13.27251471 -44.22926587  16.76452455\n",
-      "  19.31787748]\n",
+      "weights:[-11.98188077   9.91375335 -31.43606046  11.36337077  -3.24505257\n",
+      "  -3.7331093    3.72332919  -0.92688527 -11.93624256 -41.72616592\n",
+      "  15.58442697  21.55199288 -10.15893634]\n",
+      "learning rate:0.0001 \n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 1002\n",
+      "weights:[-1.29354212  0.27327029 -3.58065517  1.7309661   0.84208821 -0.25825332\n",
+      "  2.2592053  -1.90248507 -1.29332327 -4.54236099  1.78740098  5.37957981\n",
+      " -1.57641878]\n",
+      "learning rate:0.0001 \n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 5919\n",
+      "weights:[ -7.42247869   5.38094689 -19.57968651   8.10447444  -3.44401544\n",
+      "  -2.02100831   3.52974507  -3.31876776  -7.42515601 -27.46678653\n",
+      "   8.11542989  14.87714699  -6.09426518]\n",
+      "56.990595611285265\n",
+      "learning rate:0.0001 \n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 7452\n",
+      "weights:[-10.14458526  -5.08856077 -28.12355304  13.37791286  -2.82509261\n",
+      "  -1.99791052   1.93343923  -1.14878876 -10.14878413 -37.2977355\n",
+      "  14.52126865  21.65805945  -3.08222799]\n",
+      "learning rate:0.0001 \n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 1001\n",
+      "weights:[-1.28503992 -3.49980052 -4.06581921  1.68068817 -1.30643215 -0.38352933\n",
+      "  1.66902109 -0.44879108 -1.29650681 -4.56084317  1.37676087  7.77238921\n",
+      " -2.11781217]\n",
+      "learning rate:0.0001 \n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 1001\n",
+      "weights:[-1.33648261 -0.25326236 -3.96125562  1.66574934 -1.11211076 -0.40697315\n",
+      "  1.72863543 -1.13973245 -1.3376102  -4.70497708  1.74078619  6.79434599\n",
+      " -2.86836788]\n",
+      "learning rate:0.0001 \n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 1001\n",
+      "weights:[-1.296411   -0.22483991 -3.56092324  1.68182915  0.8546138  -0.25415231\n",
+      "  1.64339615  0.37887417 -1.29616802 -4.50898882  1.69341945  5.33829202\n",
+      " -1.26452198]\n",
+      "learning rate:0.0001 \n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 1000\n",
+      "weights:[-1.26839612 -1.26303984 -3.74254547  1.60285273 -0.76191243 -0.35015074\n",
+      "  2.33631978  0.83203787 -1.27494849 -4.55631855  1.44606326  7.35214698\n",
+      " -1.50428191]\n",
+      "59.49843260188088\n",
       "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
+      " stop threshold:2.5 \n",
       " number of iterations: 10000\n",
-      "weights:[-13.02470657 -30.86055608   6.69455461  -3.58438774  -4.21966033\n",
-      "   3.85901177  -0.91424924 -13.09241246 -41.09553823  11.37939882\n",
-      "  19.26138971]\n",
-      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "weights:[-12.21760353  -4.6958355  -32.99766734  15.06679478  -2.22570192\n",
+      "  -2.4384269    3.14424686  -3.01060223 -12.20922767 -44.066638\n",
+      "  18.15777292  19.48670013   9.31763712]\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 10000\n",
-      "weights:[-12.18451377 -31.35320322   9.8749851   -3.19760741  -3.84977661\n",
-      "   3.71132221  -0.86513886 -12.15014235 -41.46072706  15.02191282\n",
-      "  19.90603792]\n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 6049\n",
+      "weights:[ -7.5401038   -6.44946875 -21.70300298   8.03947791  -3.61597097\n",
+      "  -2.42804814   3.1664484   -3.12798859  -7.56800405 -27.51246402\n",
+      "   8.25728038  15.63025499   7.11445845]\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 1005\n",
-      "weights:[-1.3922488  -3.61305295  1.65218249  0.47657148 -0.26576165  2.21242097\n",
-      " -2.22035313 -1.39170369 -4.83326141  1.68820058  4.17268836]\n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 5819\n",
+      "weights:[ -7.91164139  -0.61730076 -20.37754041   7.31722272  -3.42100343\n",
+      "  -2.29744619   3.37997767  -3.35747132  -7.88838635 -27.64417487\n",
+      "   9.71604576  13.14059768   5.40581996]\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 7835\n",
-      "weights:[ -9.57223975 -24.63445211   8.71603422  -3.18157925  -2.64695472\n",
-      "   3.13515975  -2.46995858  -9.58248017 -34.32208688   9.90399594\n",
-      "  16.38170204]\n",
-      "5-fold LR accuracy on wine: 61.504702194357364\n",
-      "244.55159974098206\n",
-      "\n",
-      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      " stop threshold:2.5 \n",
+      " number of iterations: 1000\n",
+      "weights:[-1.36191205 -0.8107182  -3.58863036  1.65930661  0.65642381 -0.26313172\n",
+      "  2.49298691 -1.61786225 -1.36163261 -4.72604977  1.69584201  4.53331185\n",
+      "  1.52915702]\n",
       "learning rate:0.0001 \n",
-      " stop threshold:1.5 \n",
-      " number of iterations: 10000\n",
-      "weights:[-13.28971088 -34.05486465  12.08575627  -3.03177041  -2.74261936\n",
-      "   3.42771053  -3.19418595 -13.31085345 -44.82348703  17.59536105\n",
-      "  19.78209816]\n"
+      " stop threshold:2.5 \n",
+      " number of iterations: 5227\n",
+      "weights:[ -6.86237235  -0.6041477  -17.59301951   6.9007293   -3.35491687\n",
+      "  -1.81598232   3.55592258  -3.33539355  -6.86644364 -25.02144341\n",
+      "   7.03557177  11.70316645   5.74419308]\n",
+      "59.49843260188088\n"
      ]
     }
    ],
    "source": [
-    "import time\n",
     "lr = LogisticRegression()\n",
-    "for i in range(1, 10):\n",
-    "    startTime = time.time()\n",
-    "    print(str(i) + \"-fold LR accuracy on wine: \" + str(k_fold(X, Y, i, lr)))\n",
-    "    print(time.time() - startTime)\n",
-    "    print()"
+    "\n",
+    "# acidity\n",
+    "F1 = []\n",
+    "for i in range (0, len(X)):\n",
+    "    F1.append(X[i][0] + X[i][1] + X[i][2])\n",
+    "F1 = np.hstack((X, np.atleast_2d(F1).T))\n",
+    "\n",
+    "# Bounded Sulfur Dioxide\n",
+    "F2 = []\n",
+    "for i in range (0, len(X)):\n",
+    "    F2.append(X[i][6] - X[i][5])\n",
+    "F2 = np.hstack((X, np.atleast_2d(F2).T))\n",
+    "\n",
+    "# Acidity alcohol ratio\n",
+    "F3 = []\n",
+    "for i in range (0, len(X)):\n",
+    "    F3.append(X[i][10]/X[i][8])\n",
+    "F3 = np.hstack((X, np.atleast_2d(F3).T))\n",
+    "\n",
+    "print(k_fold(X, Y, 5, lr))\n",
+    "print(k_fold(F1, Y, 5, lr))\n",
+    "print(k_fold(F2, Y, 5, lr))\n",
+    "print(k_fold(F3, Y, 5, lr))"
    ]
   },
   {
