--- a/breast-cancer/logistic-regression.ipynb
+++ b/breast-cancer/logistic-regression.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=data[:,1:10]\n",
+    "X=data[:,1:-1]\n",
     "Y=np.ravel((data[:,-1:]))"
    ]
   },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -185,41 +185,39 @@
      "output_type": "stream",
      "text": [
       "learning rate:0.001 \n",
-      " stop threshold:0.0002 \n",
-      " number of iterations: 4009\n",
-      "weights:[-9.21846794e+00  4.57654155e-01  2.44140004e-01  1.59499609e-01\n",
-      "  2.60163201e-01 -1.16421552e-03  4.32458808e-01  3.78837694e-01\n",
-      "  1.33913577e-01  3.11444890e-01]\n",
-      "Warning, reached max iterations of 5000, stopping because we haven't converged yet\n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 2478\n",
+      "weights:[-8.73376447  0.42100942  0.2638203   0.15393149  0.2476816  -0.02602803\n",
+      "  0.43092158  0.34816798  0.1423106   0.23651423]\n",
       "learning rate:0.001 \n",
-      " stop threshold:0.0002 \n",
-      " number of iterations: 5000\n",
-      "weights:[-12.00112852   0.68824535  -0.05098261   0.28361941   0.44429868\n",
-      "   0.03412249   0.34651163   0.56463723   0.41573122   0.95229659]\n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 3817\n",
+      "weights:[-11.51891952   0.65191633  -0.03875821   0.28358922   0.42365216\n",
+      "   0.0261974    0.3445303    0.5355565    0.40110438   0.89270398]\n",
       "learning rate:0.001 \n",
-      " stop threshold:0.0002 \n",
-      " number of iterations: 3366\n",
-      "weights:[-9.5343657   0.473617   -0.08087272  0.3824713   0.25780921  0.1272465\n",
-      "  0.37188773  0.50335314  0.21237498  0.37232926]\n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 2181\n",
+      "weights:[-9.15461191  0.44457472 -0.05989988  0.3742316   0.24228946  0.11673248\n",
+      "  0.36603158  0.4744639   0.20678322  0.35313014]\n",
       "learning rate:0.001 \n",
-      " stop threshold:0.0002 \n",
-      " number of iterations: 3525\n",
-      "weights:[-9.6568054   0.48951105  0.01338228  0.35384836  0.4118834   0.09600074\n",
-      "  0.39121251  0.35895796  0.17021498  0.47914982]\n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 2243\n",
+      "weights:[-9.24656417  0.46134985  0.02934435  0.34663377  0.39038616  0.08425962\n",
+      "  0.38456313  0.33594039  0.16692075  0.4423335 ]\n",
       "learning rate:0.001 \n",
-      " stop threshold:0.0002 \n",
-      " number of iterations: 2994\n",
-      "weights:[-9.31904696  0.51658909 -0.06245557  0.33931854  0.30334659  0.11382729\n",
-      "  0.36166383  0.38340896  0.19315242  0.46596119]\n"
+      " stop threshold:0.0005 \n",
+      " number of iterations: 1901\n",
+      "weights:[-8.96909556  0.49106145 -0.05104293  0.33683637  0.28933323  0.1039448\n",
+      "  0.35834415  0.35902555  0.18947939  0.43196568]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "96.5925925925926"
+       "96.44444444444444"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -269,21 +267,138 @@
       " number of iterations: 10000\n",
       "weights:[-294.82464315   18.704577     -1.79197404    9.65449318   10.77273003\n",
       "    6.24930397   10.11715953   14.34293134    6.19838033   22.81382647]\n",
-      "95.25925925925927\n"
+      "95.25925925925927\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.01 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-35.97382858   2.40511719   1.39958258   0.95554357   1.1741935\n",
+      "   0.32130825   1.98444226   2.01702149   0.87840069   1.52383217]\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.01 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-44.40431351   3.07140859  -0.05505491   1.71729283   1.931675\n",
+      "   0.58737776   1.75029724   2.40130599   1.59731362   3.73510386]\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.01 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-44.67741134   3.40233331  -0.11256022   2.41027457   1.64220287\n",
+      "   1.2033508    2.2741297    3.05486693   1.42273463   1.72234414]\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.01 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-5.15511410e+01  2.93150863e+00  2.82147633e-02  1.71400294e+00\n",
+      "  2.32223190e+00  8.38133187e-01  1.93876214e+00  2.16247463e+00\n",
+      "  8.53315041e-01  3.23997126e+00]\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.01 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-54.72848294  -1.40625617   5.65872375   7.11715276   2.04900878\n",
+      "  -4.5384342    6.92761297  -2.86431178   4.12294937   0.75242095]\n",
+      "96.59259259259258\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-18.75216705   1.1813079    0.8511734    0.47933514   0.62082356\n",
+      "   0.09085547   1.09341457   0.99324339   0.49561727   0.69316707]\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-2.41653627e+01  1.61565720e+00 -1.24577263e-03  8.33264909e-01\n",
+      "  9.99311195e-01  1.78466239e-01  9.48649025e-01  1.31996074e+00\n",
+      "  8.76948944e-01  2.03626333e+00]\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-24.61107068   1.58104324  -0.28505518   1.16476522   0.76438258\n",
+      "   0.41469846   1.05928365   1.54630197   0.61742207   1.10784293]\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-22.43676942   0.93687117   0.09726718   0.66796832   0.64599668\n",
+      "   0.18535888   0.82124347   0.77704301   0.25209721   1.08563431]\n",
+      "Warning, reached max iterations of 10000, stopping because we haven't converged yet\n",
+      "learning rate:0.005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 10000\n",
+      "weights:[-25.38300269   1.37629666  -0.31864564   0.7893239    0.61705601\n",
+      "   0.26632374   0.84462045   0.98592416   0.35270464   1.20651481]\n",
+      "97.18518518518519\n",
+      "learning rate:0.001 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 2478\n",
+      "weights:[-8.73376447  0.42100942  0.2638203   0.15393149  0.2476816  -0.02602803\n",
+      "  0.43092158  0.34816798  0.1423106   0.23651423]\n",
+      "learning rate:0.001 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 3817\n",
+      "weights:[-11.51891952   0.65191633  -0.03875821   0.28358922   0.42365216\n",
+      "   0.0261974    0.3445303    0.5355565    0.40110438   0.89270398]\n",
+      "learning rate:0.001 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 2181\n",
+      "weights:[-9.15461191  0.44457472 -0.05989988  0.3742316   0.24228946  0.11673248\n",
+      "  0.36603158  0.4744639   0.20678322  0.35313014]\n",
+      "learning rate:0.001 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 2243\n",
+      "weights:[-9.24656417  0.46134985  0.02934435  0.34663377  0.39038616  0.08425962\n",
+      "  0.38456313  0.33594039  0.16692075  0.4423335 ]\n",
+      "learning rate:0.001 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 1901\n",
+      "weights:[-8.96909556  0.49106145 -0.05104293  0.33683637  0.28933323  0.1039448\n",
+      "  0.35834415  0.35902555  0.18947939  0.43196568]\n",
+      "96.44444444444444\n",
+      "learning rate:0.0005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 3190\n",
+      "weights:[-8.08811001  0.36984556  0.29164761  0.1492008   0.23245444 -0.06182856\n",
+      "  0.429951    0.30353427  0.1537977   0.14875283]\n",
+      "learning rate:0.0005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 4438\n",
+      "weights:[-1.03625261e+01  5.64802028e-01 -6.30364830e-03  2.82861473e-01\n",
+      "  3.73427104e-01  6.17667945e-03  3.40289758e-01  4.64789091e-01\n",
+      "  3.68309607e-01  7.42190040e-01]\n",
+      "learning rate:0.0005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 3003\n",
+      "weights:[-8.62028551  0.40342255 -0.02867653  0.36246048  0.22029218  0.10096283\n",
+      "  0.35810406  0.43308457  0.19953896  0.3257927 ]\n",
+      "learning rate:0.0005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 3117\n",
+      "weights:[-8.67617259  0.42203954  0.05328855  0.33643964  0.36060974  0.06666233\n",
+      "  0.37594398  0.30198164  0.16311296  0.39327803]\n",
+      "learning rate:0.0005 \n",
+      " stop threshold:0.0005 \n",
+      " number of iterations: 2858\n",
+      "weights:[-8.47196958  0.45422216 -0.03351394  0.33299815  0.26926716  0.08909976\n",
+      "  0.35384714  0.32360117  0.18476145  0.38718738]\n",
+      "96.44444444444444\n"
      ]
     }
    ],
    "source": [
-    "# lr = LogisticRegression(0.05)\n",
-    "# print(k_fold(X, Y, 5, lr))\n",
-    "# lr = LogisticRegression(0.01)\n",
-    "# print(k_fold(X, Y, 5, lr))\n",
-    "# lr = LogisticRegression(0.005)\n",
-    "# print(k_fold(X, Y, 5, lr))\n",
-    "# lr = LogisticRegression(0.001)\n",
-    "# print(k_fold(X, Y, 5, lr))\n",
-    "# lr = LogisticRegression(0.0005)\n",
-    "# print(k_fold(X, Y, 5, lr))"
+    "lr = LogisticRegression(0.05)\n",
+    "print(k_fold(X, Y, 5, lr))\n",
+    "lr = LogisticRegression(0.01)\n",
+    "print(k_fold(X, Y, 5, lr))\n",
+    "lr = LogisticRegression(0.005)\n",
+    "print(k_fold(X, Y, 5, lr))\n",
+    "lr = LogisticRegression(0.001)\n",
+    "print(k_fold(X, Y, 5, lr))\n",
+    "lr = LogisticRegression(0.0005)\n",
+    "print(k_fold(X, Y, 5, lr))"
    ]
   },
   {
