--- a/Deep Learning.ipynb
+++ b/Deep Learning.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,16 @@
     "import csv\n",
     "import pandas as pd\n",
     "from torch.utils.data import Dataset\n",
+    "\n",
+    "#nlp\n",
+    "import nltk\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "from nltk.tag import pos_tag_sents\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from collections import Counter\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from pymfe.mfe import MFE\n",
     "\n",
     "# Deep learning \n",
     "import torch\n",
@@ -48,29 +58,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GPU"
+    "# GPU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\")\n",
-    "print(device)"
+    "device = torch.device(\"cuda\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flags"
+    "# Flags"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,10 +92,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Loader\n",
+    "# Data Loader\n",
     "    - Assumes data is preprossessed such that no transformation must be done on load\n",
     "    - Does not load element as a tensor\n",
     "    - Return a descriptor vector and an encoded vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filepaths\n",
+    "train_data = './Data/reddit_train.csv'\n",
+    "test_data = './Data/name_of_test.csv'\n",
+    "\n",
+    "# gloabal labels\n",
+    "labels = ['hockey', 'nba', 'leagueoflegends', 'soccer', \\\n",
+    "          'funny', 'movies', 'anime', 'Overwatch', 'trees', \\\n",
+    "          'GlobalOffensive', 'nfl', 'AskReddit', 'gameofthrones', \\\n",
+    "          'conspiracy', 'worldnews', 'wow', 'europe', 'canada', \\\n",
+    "          'Music', 'baseball']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning and Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load\n",
+    "comment_data = pd.read_csv(train_data)\n",
+    "\n",
+    "#clean\n",
+    "comment_data['prep'] = comment_data['comments'].str.replace(r'[^\\w\\s]+', '')\n",
+    "comment_data['prep'] = comment_data['prep'].str.lower()\n",
+    "comment_data['prep'] = comment_data['prep'].str.replace('(\\d+)', ' num ')\n",
+    "comment_data['prep'] = comment_data['prep'].str.replace(r'http(?<=http).*', ' wasurl ')\n",
+    "comment_data['prep'] = comment_data['prep'].str.replace(r'\\s+', \" \")\n",
+    "comment_data['prep'] = comment_data['prep'].str.replace(\" +\", \" \")\n",
+    "\n",
+    "# lemmatization\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "tt = TweetTokenizer()\n",
+    "def lemmatize_col(row):\n",
+    "    row = tt.tokenize(row)\n",
+    "    return ' '.join([lemmatizer.lemmatize(w) for w in row])\n",
+    "comment_data['prep'] = comment_data.prep.apply(lemmatize_col)\n",
+    "\n",
+    "tfidf_vectorizer = TfidfVectorizer(tokenizer=tt.tokenize, stop_words=\"english\", ngram_range=(1,1))\n",
+    "tfidf = tfidf_vectorizer.fit_transform(comment_data.prep)"
    ]
   },
   {
@@ -95,9 +158,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filepaths\n",
-    "train_data = './Data/name_of_train.csv'\n",
-    "test_data = './Data/name_of_test.csv'"
+    "#binning\n",
+    "comments = []\n",
+    "vector_idf = tfidf.toarray()\n",
+    "for idx, vec in enumerate(vector_idf):\n",
+    "    item = np.array((vec, comment_data['subreddits'][idx]))\n",
+    "    comments.append(item)\n",
+    "comments = np.asarray(comments)\n",
+    "print(comments[0][0].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Object"
    ]
   },
   {
@@ -109,10 +184,9 @@
     "# data loader fir train and test\n",
     "class CommentData(Dataset):\n",
     "    \n",
-    "    def __init__(self, frames):\n",
-    "        self.frames = frames\n",
-    "        self.labels = np.unique(self.frames)\n",
-    "        self.encoding = np.eye(len(self.labels))\n",
+    "    def __init__(self, data, labels=labels):\n",
+    "        self.frames = comments\n",
+    "        self.labels = labels\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.frames)\n",
@@ -120,13 +194,12 @@
     "    def __getitem__(self, idx):\n",
     "        element, label = self.frames[idx]\n",
     "        enc_label = self.encode(label)\n",
-    "        return element, enc_label\n",
+    "        return (element, enc_label)\n",
     "    \n",
     "    # one-hot encoding on element fetch\n",
     "    def encode(self, label):\n",
     "        location = self.labels.index(label)\n",
-    "        encoding = self.encoding[location]\n",
-    "        return encoding"
+    "        return location"
    ]
   },
   {
@@ -142,37 +215,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assume loaded Nx1x1\n",
+    "\n",
     "# leverages pandas for fast csv load but operates in numpy\n",
     "class kFold():\n",
-    "    def __init__(self, filepath, numFolds=5):\n",
-    "        self.data = np.asarray(pd.read_csv(csv_file))\n",
+    "    def __init__(self, data, numFolds=5):\n",
+    "        self.data = data\n",
     "        self.numFolds = numFolds\n",
     "        self.splits = []\n",
     "        \n",
     "    def generateSplits(self):\n",
-    "        np.random.shuffle(self.data)\n",
+    "        #np.random.shuffle(self.data)\n",
     "        \n",
     "        folds = []\n",
     "        splitPoint = self.data.shape[0] // (self.numFolds)  #breakpoint index jump\n",
     "        \n",
     "        for i in range(self.numFolds - 1):\n",
-    "            folds.append(self.data[i*splitPoint:(i+1)*splitPoint, :, :])\n",
+    "            folds.append(self.data[i*splitPoint:(i+1)*splitPoint, :])\n",
     "            \n",
-    "        folds.append(self.data[(i+1)*splitPoint:,:,:]) #get extra points in last batch\n",
+    "        folds.append(self.data[(i+1)*splitPoint:,:]) #get extra points in last batch\n",
     "        \n",
     "        # create split permutations 80/10/10\n",
     "        foldDivisor = len(folds) // 2\n",
     "        for i in range(self.numFolds):\n",
+    "            train = []\n",
     "            for k in range(self.numFolds):\n",
     "                if i == k:\n",
-    "                    validation = fold[i][:foldDivisor] \n",
-    "                    test = fold[i][foldDivisor:] \n",
+    "                    validation = folds[i][:foldDivisor] \n",
+    "                    test = folds[i][foldDivisor:] \n",
     "                else:\n",
-    "                    train.append(fold[k])\n",
+    "                    train.append(folds[k])\n",
     "            \n",
-    "            train = np.hstack(train) # adapt dims\n",
-    "            self.split.append((train, validation, test))"
+    "            train = np.vstack(train) # adapt dims\n",
+    "            self.splits.append((train, validation, test))"
    ]
   },
   {
@@ -210,10 +284,10 @@
     "        self.poolC1 = nn.MaxPool1d(3, 3)\n",
     "        \n",
     "        self.blend1 = nn.Sequential(\n",
-    "            nn.Conv1d(3*64, 96, 3, padding = 1)\n",
-    "            nn.BatchNorm1d(96)\n",
-    "            nn.Relu(True)\n",
-    "            nn.MaxPool1d(3,3)\n",
+    "            nn.Conv1d(3*64, 96, 3, padding = 1),\n",
+    "            nn.BatchNorm1d(96),\n",
+    "            nn.ReLU(True),\n",
+    "            nn.MaxPool1d(3,3),\n",
     "            nn.Dropout(0.5)\n",
     "        )\n",
     "        \n",
@@ -223,51 +297,50 @@
     "        self.reluA2 = nn.ReLU(True)\n",
     "        self.poolA2 = nn.MaxPool1d(3, 3)\n",
     "        \n",
-    "        self.convB2 = nn.Conv1d(96, 128 5, padding = 2)\n",
+    "        self.convB2 = nn.Conv1d(96, 128, 5, padding = 2)\n",
     "        self.normB2 = nn.BatchNorm1d(128)\n",
     "        self.reluB2 = nn.ReLU(True)\n",
     "        self.poolB2 = nn.MaxPool1d(3, 3)\n",
     "        \n",
-    "        self.convC2 = nn.Conv1d(96, 128 7, padding = 3)\n",
+    "        self.convC2 = nn.Conv1d(96, 128, 7, padding = 3)\n",
     "        self.normC2 = nn.BatchNorm1d(128)\n",
     "        self.reluC2 = nn.ReLU(True)\n",
     "        self.poolC2 = nn.MaxPool1d(3, 3)\n",
     "    \n",
     "        self.blend2 = nn.Sequential(\n",
-    "            nn.Conv1d(3*128, 196, 3, padding = 1)\n",
-    "            nn.BatchNorm1d(196)\n",
-    "            nn.Relu(True)\n",
+    "            nn.Conv1d(3*128, 196, 3, padding = 1),\n",
+    "            nn.BatchNorm1d(196),\n",
+    "            nn.ReLU(True),\n",
     "            nn.MaxPool1d(3,3)\n",
     "        )\n",
     "        \n",
     "        # mini inception net block 3\n",
     "        self.convA3 = nn.Conv1d(196, 256, 3, padding = 1)\n",
-    "        self.normA3 = nn.BatchNorm1d(128)\n",
+    "        self.normA3 = nn.BatchNorm1d(256)\n",
     "        self.reluA3 = nn.ReLU(True)\n",
     "        self.poolA3 = nn.MaxPool1d(3, 3)\n",
     "        \n",
     "        # core modules\n",
     "        self.convB3 = nn.Conv1d(196, 256, 5, padding = 2)\n",
-    "        self.normB3 = nn.BatchNorm1d(128)\n",
+    "        self.normB3 = nn.BatchNorm1d(256)\n",
     "        self.reluB3 = nn.ReLU(True)\n",
     "        self.poolB3 = nn.MaxPool1d(3, 3)\n",
     "        \n",
     "        self.convC3 = nn.Conv1d(196, 256, 7, padding = 3)\n",
-    "        self.normC3 = nn.BatchNorm1d(128)\n",
+    "        self.normC3 = nn.BatchNorm1d(256)\n",
     "        self.reluC3 = nn.ReLU(True)\n",
     "        self.poolC3 = nn.MaxPool1d(3, 3)\n",
     "    \n",
     "        self.merge = nn.Sequential(\n",
-    "            nn.Conv1d(3*196, 256, 3, padding = 1)\n",
-    "            nn.BatchNorm1d(256)\n",
-    "            nn.Relu(True)\n",
-    "            nn.MaxPool1d(3,3)\n",
-    "            nn.AdaptiveAvgPool1d(256)\n",
-    "            nn.Dropout(0.2)\n",
-    "            nn.Linear(256, 20)\n",
+    "            nn.Conv1d(3*256, 256, 3, padding = 1),\n",
+    "            nn.BatchNorm1d(256),\n",
+    "            nn.ReLU(True),\n",
+    "            nn.MaxPool1d(3,3),\n",
+    "            nn.Dropout(0.2),\n",
     "        )\n",
     "        \n",
-    "        self.dropout = Dropout1d(0.2)\n",
+    "        self.linear = nn.Linear(23808, 20)\n",
+    "        self.dropout = nn.Dropout(0.5)\n",
     "\n",
     "    def forward(self, x):\n",
     "        \n",
@@ -288,7 +361,9 @@
     "        C = self.dropout(self.poolC3(self.reluC3(self.normC3(self.convC3(x)))))\n",
     "        x = torch.cat((A,B,C), dim=1)\n",
     "        x = self.merge(x)\n",
-    "        \n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = self.linear(x)\n",
+    "\n",
     "        return x\n"
    ]
   },
@@ -299,9 +374,9 @@
    "outputs": [],
    "source": [
     "if NEW_MODEL:\n",
-    "    net = WhoReddit()\n",
+    "    net = WhoReddit().to(device)\n",
     "else:\n",
-    "    #todo: load network\n",
+    "    print('save a model') #todo: load network\n",
     "\n",
     "print(net)"
    ]
@@ -337,7 +412,7 @@
    "outputs": [],
    "source": [
     "# split init\n",
-    "commentFolds = kFold(train_data) \n",
+    "commentFolds = kFold(comments) \n",
     "commentFolds.generateSplits()\n",
     "splits = commentFolds.splits"
    ]
@@ -348,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 50"
+    "epochs = 5"
    ]
   },
   {
@@ -357,11 +432,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx, (train, validation, test) in enumerate(splits): # split\n",
-    "    # Data loaders!!\n",
-    "    train_loader = torch.utils.data.DataLoader(train, batch_size=2, num_workers=8, shuffle=True)\n",
-    "    val_loader = torch.utils.data.DataLoader(validation, batch_size=1, num_workers=8)\n",
-    "    test_loader = torch.utils.data.DataLoader(validation, batch_size=1, num_workers=8)\n",
+    "for idx, split in enumerate(splits): # split\n",
+    "    \n",
+    "    train, val, test = split\n",
+    "    \n",
+    "    # Dataset obj\n",
+    "    train_set = CommentData(train)\n",
+    "    val_set = CommentData(val)\n",
+    "    test_set = CommentData(test)\n",
+    "    \n",
+    "    # Data loaders\n",
+    "    train_loader = torch.utils.data.DataLoader(train_set, batch_size=32, num_workers=8)\n",
+    "    val_loader = torch.utils.data.DataLoader(val_set, batch_size=32, num_workers=8)\n",
+    "    test_loader = torch.utils.data.DataLoader(test_set, batch_size=32, num_workers=8)\n",
     "    \n",
     "    # train cycle here\n",
     "    for epoch in range(epochs):\n",
@@ -371,26 +454,26 @@
     "        correct = 0.\n",
     "        total = 0.\n",
     "        \n",
-    "        for i, (comment, label) in enumerate(train_loader):\n",
+    "        for i, (comment, target) in enumerate(train_loader):\n",
     "            \n",
     "            # tensor to device\n",
-    "            comment = torch.FloatTensor(comment).to(device)\n",
-    "            label = torch.FloatTensor(label).to(device)\n",
+    "            comment = comment.to(device=device, dtype=torch.float32).unsqueeze(1)\n",
+    "            target = target.to(device=device, dtype=torch.int64)\n",
     "\n",
     "            # zero the parameter gradients\n",
     "            optimizer.zero_grad()\n",
     "\n",
     "            # forward + backward + optimize\n",
     "            output = net(comment)\n",
-    "            error = loss(output, label)\n",
+    "            error = loss(output, target)\n",
     "            error.backward()\n",
     "            optimizer.step()\n",
     "\n",
     "            # print statistics\n",
-    "            running_loss += loss.item()\n",
-    "            if i % 50 == 49:    # print every 50 mini-batches\n",
+    "            running_loss += error.item()\n",
+    "            if i % 500 == 499:    # print every 50 mini-batches\n",
     "                print('[%d, %5d] loss: %.5f' %\n",
-    "                      (epoch + 1, i + 1, running_loss / 50))\n",
+    "                      (epoch + 1, i + 1, running_loss / 500))\n",
     "                running_loss = 0.0\n",
     "\n",
     "            # Get predictions\n",
@@ -398,7 +481,7 @@
     "            preds_cls = preds.argmax(dim=1)\n",
     "\n",
     "            # Count number of correct predictions\n",
-    "            correct_preds = torch.eq(preds_cls, label)\n",
+    "            correct_preds = torch.eq(preds_cls, target)\n",
     "            correct += torch.sum(correct_preds).cpu().item()\n",
     "            total += len(correct_preds)\n",
     "\n",
@@ -409,10 +492,10 @@
     "        correct = 0.\n",
     "        total = 0.\n",
     "        \n",
-    "        for i, (comment, label) in enumerate(val_loader):\n",
+    "        for i, (comment, target) in enumerate(val_loader):\n",
     "\n",
-    "            comment = torch.FloatTensor(comment).to(device)\n",
-    "            label = torch.FloatTensor(label).to(device)\n",
+    "            comment = comment.to(device=device, dtype=torch.float32).unsqueeze(1)\n",
+    "            target = target.to(device=device, dtype=torch.int64)\n",
     "            output = net(comment)\n",
     "\n",
     "            # Get predictions\n",
@@ -420,17 +503,17 @@
     "            preds_cls = preds.argmax(dim=1)\n",
     "\n",
     "            # Count number of correct predictions\n",
-    "            correct_preds = torch.eq(preds_cls, label)\n",
+    "            correct_preds = torch.eq(preds_cls, target)\n",
     "            correct += torch.sum(correct_preds).cpu().item()\n",
     "            total += len(correct_preds)\n",
     "\n",
     "        valid_acc = correct / total\n",
     "        print(\"Epoch:\", epoch+1,\"Validation Acc:\",valid_acc)\n",
     "        \n",
-    "        for i, (comment, label) in enumerate(test_loader):\n",
+    "        for i, (comment, target) in enumerate(test_loader):\n",
     "\n",
-    "            comment = torch.FloatTensor(comment).to(device)\n",
-    "            label = torch.FloatTensor(label).to(device)\n",
+    "            comment = comment.to(device=device, dtype=torch.float32).unsqueeze(1)\n",
+    "            target = target.to(device=device, dtype=torch.int64)\n",
     "            output = net(comment)\n",
     "\n",
     "            # Get predictions\n",
@@ -438,7 +521,7 @@
     "            preds_cls = preds.argmax(dim=1)\n",
     "\n",
     "            # Count number of correct predictions\n",
-    "            correct_preds = torch.eq(preds_cls, label)\n",
+    "            correct_preds = torch.eq(preds_cls, target)\n",
     "            correct += torch.sum(correct_preds).cpu().item()\n",
     "            total += len(correct_preds)\n",
     "\n",
@@ -452,6 +535,13 @@
     "    if idx-1 >= FOLD_USE:\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
