Move to peacemaster

--- a/Deep Learning.ipynb
+++ b/Deep Learning.ipynb
@@ -592,6 +592,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### SAVE TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), './Models/name')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Training"
    ]
   },
@@ -654,7 +670,9 @@
       "[3,   500] loss: 1.99049\n",
       "[3,  1000] loss: 1.88816\n",
       "[3,  1500] loss: 1.84728\n",
-      "[3,  2000] loss: 1.88008\n"
+      "[3,  2000] loss: 1.88008\n",
+      "[3,  2500] loss: 1.81016\n",
+      "Epoch: 3 Training Acc: 0.4513\n"
      ]
     }
    ],
